# rnng-bert

./: .gitignore  CMakeLists.txt  README.md  add_dev_unk.py  analyze_time.py  bert_decode_from_tokens.sh  bert_make_graphs.sh  brown_inorder_bert_large.sh  brown_inorder_collapse_bert_large.sh  brown_topdown_bert_large.sh  build.sh  check_jobs.sh  corpora_analysis.py  corpus_decode.sh  decode.py  decode_from_oracle_inorder_bert_chinese.sh  decode_from_oracle_inorder_bert_large_english.sh  decode_gen_silver_high_mem.sh  decode_gen_wsj.sh  decode_gen_wsj_high_mem.sh  decode_gen_wsj_shift-size_bin-word.sh  decode_test_gen_silver_high_mem.sh  dev_discrim_pos_embeddings_ling_silver_seed.sh  dev_gen_adhi_interpolate.sh  dev_gen_greedy.sh  dev_gen_greedy_ignore.sh  dev_gen_sample.sh  dev_gen_sample_beam_pos_pretrain.sh  dev_gen_sample_pos_pretrain.sh  dev_gen_sample_pos_pretrain_interpolate.sh  dev_gen_sample_pos_pretrain_onlystack.sh  dev_gen_sample_pos_pretrain_ptb_format.sh  dev_inorder_bert.sh  dev_inorder_collapse_bert_large.sh  dev_topdown_bert.sh  dev_topdown_bert_large.sh  dev_topdown_collapse_bert_large.sh  dynamic_oracle.py  dynamic_oracle.sh  dynamic_oracle_include-gold.sh  (+83 more)
EVALB/: COLLINS_ch.prm  evalb.c
bert_models/: cased_L-12_H-768_A-12_graph.pb  chinese_L-12_H-768_A-12_graph.pb  uncased_L-12_H-768_A-12_graph.pb
cnn/: CMakeLists.txt
cnn/cnn/: CMakeLists.txt  aligned-mem-pool.h  cfsm-builder.cc  cuda.cc  cuda.h  devices.cc  devices.h  gpu-ops.cu  gpu-ops.h  grad-check.cc  init.cc  init.h  lstm.cc  lstm.h  model.cc  model.h  nodes.cc  rnn.h  training.cc  training.h
corpora/: .gitignore  analysis_path.sh  build_corpus.sh  corpus.sh  process_silver.sh  strip_top.py
corpora/brown/: .gitignore  build_corpus.sh
corpora/ctb_5.1/: .gitignore  build_corpus.sh  build_corpus_pred.sh  process_ctb.py
corpora/ctb_5.1/jackknife/: jackknife.py  model_full.bin.props  train-chinese-nodistsim.tagger.props
corpora/ctb_9.0/: .gitignore  analyze.ipynb  build_corpus.sh  process.ipynb
corpora/english/: .gitignore  build_corpus.sh
corpora/ewt/: .gitignore  build_corpus.sh  get_ewt.py
corpora/french/: wikifil.pl
corpora/genia/: .gitignore  build_corpus.sh  build_ood_corpus.sh  build_prediction_corpus.sh
ctb_5.1_corpora/jackknife/: jackknife.py
ctb_5.1_corpora/jackknife/split_0/: model_0.bin.props
ctb_5.1_corpora/jackknife/split_1/: model_1.bin.props
ctb_5.1_corpora/jackknife/split_2/: model_2.bin.props
ctb_5.1_corpora/jackknife/split_3/: model_3.bin.props
ctb_5.1_corpora/jackknife/split_4/: model_4.bin.props
ctb_5.1_corpora/jackknife/split_5/: model_5.bin.props
ctb_5.1_corpora/jackknife/split_6/: model_6.bin.props
ctb_5.1_corpora/jackknife/split_7/: model_7.bin.props
ctb_5.1_corpora/jackknife/split_8/: model_8.bin.props
ctb_5.1_corpora/jackknife/split_9/: model_9.bin.props
ctb_corpora/: ctb-clusters-train.txt  ctb_reader.py  dev-tags.txt  notes.txt  test-tags.txt  train-tags.txt  trees.py
embeddings/: .gitignore  filter_w2v.py  filter_w2v_ctb.py  filter_w2v_ctb_5.1.py  filter_w2v_french.py  get_embeddings.sh
evalb_spmrl2013/: .gitignore  Makefile  README  evalb.c  hebrew.prm  new.prm  spmrl.prm.punct  status
french_corpora/: README.txt  strip_functional.py  train_french_embeddings.sh
impl/: tensorflow-test.cc  word-featurizer-test.cc  word-featurizer.cc  word-featurizer.h
nt-parser/: CMakeLists.txt  eval.cc  eval.h  nt-parser-gen.cc  nt-parser.cc  nt-parser.h  oracle.cc  oracle.h  stack.h  streaming-statistics.h  tensorflow-test.cc  training-position.h  tree.h  utils.h  word-featurizer-test.cc  word-featurizer.cc  word-featurizer.h
old_scripts/: compile.sh  dev_discrim_greedy_no-pos_embed.sh  dev_gen_sample.sh  dev_gen_sample_pos_pretrain.sh  dev_gen_sample_pos_pretrain_sanity12-30.sh  rescore_rnng_gen_decodes.sh  rescore_with_gen.sh  sample_discrim.sh  sample_discrim_no-pos_embeddings.sh  test_discrim_pos_embeddings.sh  test_gen_greedy.sh  test_gen_sample_pos_pretrain.sh  test_gen_sample_pos_pretrain_interpolate.sh  test_gen_sample_pos_pretrain_onlystack.sh  test_gen_sample_pos_pretrain_ptb_format.sh  test_gen_sample_pos_pretrain_sanity12-30.sh  train_discrim.sh  train_discrim_no-pos_embeddings.sh  train_discrim_pos_embeddings_no-stack.sh
run_scripts/: activate.sh  build_cuda.sh  decode_gen_silver_high_mem.sh  decode_gen_wsj_shift-size.sh  decode_test_gen_wsj_high_mem.sh  dynamic_oracle.sh  finetune.sh  finetune_include-gold.sh  greedy_discrim_embeddings_wsj_ensemble.sh  max_margin_explore.sh  produce_discrim_embeddings_wsj.sh  produce_discrim_embeddings_wsj_ensemble.sh  rescore_discrim_embeddings_silver.sh  rescore_gen_silver.sh  rescore_gen_wsj.sh  resume_mle.sh  resume_seq_level.sh  resume_seq_level_ctb.sh  sequence_level.sh  start_inorder_mle.sh  start_inorder_sequence_level_include_gold.sh  start_mle.sh  start_mle_ctb.sh  start_mle_ctb_5_gold.sh  start_mle_french.sh  start_mle_gpu.sh  start_sequence_level_include_gold.sh  start_sequence_level_include_gold_ctb.sh  start_sequence_level_include_gold_ctb_5_pred.sh  start_sequence_level_include_gold_french.sh  test_discrim_ctb.sh  test_discrim_pos_embeddings_ling_wsj.sh  train_discrim_pos_embeddings_ling_silver-1-to-1_seed.sh  train_discrim_pos_embeddings_ling_silver_seed.sh  train_discrim_pos_embeddings_ling_wsj_seed.sh  train_gen_silver-1-to-1_seed.sh
scripts/: add_gen_scores.py  bert_make_graph.py  bert_parse.py  bert_path.py  bert_tokenize.py  cat_decodes.py  dump_bert_tokens.py  dump_tokens.py  dynamic_oracle.py  ensemble_grid_search.ipynb  evaluate.py  filter_bad_trees.py  get_dictionary.py  get_oracle.py  get_oracle_gen.py  interactive.py  normalize_chinese.py  normalize_unicode.py  plot.py  reindex.py  remove_dev_unk.py  remove_traces.py  replace_symbols.py  retag.py  self_attention_make_graph.py  strip_functional.py  strip_root.py  strip_s1.py  strip_top.py
utils/: analyze_gen_decode.py  analyze_sampling.py  make_clusters.py  rescore.py
